<resources>
    <string name="app_name">Sauna-Meet</string>
    <string name="done_string">DONE</string>
    <string name="new_oil_name_hint">Enter Oil\'s Name</string>
    <string name="new_item_text">New Oil</string>
    <string name="back_string">Back</string>
    <string name="delete_string">Delete</string>
    <string name="login_text">LOGIN</string>
    <string name="register_text">REGISTER</string>
    <string name="username_hint">Enter Username...</string>
    <string name="password_hint">Enter Password...</string>
    <string name="title_activity_login">LoginActivity</string>

<!--    Fragment Titles     -->
    <string name="add_new_item_string">Add new Oil</string>
    <string name="all_oils_string">Oil Overview</string>
    <string name="oil_details_string">Details</string>
    <string name="meet_overview_string">Meet</string>
    <string name="new_session_string">New Session</string>


    <string name="sign_out_text">Sign Out</string>
    <string name="meet_menu_string">Meet</string>
    <string name="oils_menu_string">Oils</string>
    <string name="session_menu_string">Session</string>
    <string name="mood_samle_text">Sleepy</string>
    <string name="neutral_mood_string">Neutral</string>
    <string name="excited_mood_string">Excited</string>
    <string name="content_mood_string">Content</string>
    <string name="sad_mood_string">Sad</string>
    <string name="sleepy_mood_string">Sleepy</string>
    <string name="mood_header_string">How are you feeling today?</string>
    <string name="next_string">Next ▶</string>
    <string name="last_oil_used_header">Recently used</string>
    <string name="favorite_oil_header">Favorites</string>
    <string name="all_oils_header">All Oils</string>
    <string name="created_at_label">Created at</string>
    <string name="last_used_labe">Last used</string>
    <string name="last_used_default_string">Never</string>
    <string name="infusion_header_string">How many infusions?</string>
    <string name="infusion_selection_header_string">Select your Oils</string>
    <string name="start_string">Start</string>
</resources>